#+TITLE: Changelog

* Unreleased

** Updated
   - dev: standard makefile tasks for Practicalli projects
   - dev: lint-review v4 github action
   - dev: megalinter v8 (uses latest minor version) github action
   - dev: clj-kondo 2025.02.20 in quality check github action
   - aliases: outdated skip git diff between current and new dependency
   - aliases: update library versions using `make outdated`

   | :name                                  | :current | :latest  |
   | -------------------------------------- | -------- | -------- |
   | cider/cider-nrepl                      | 0.50.3   | 0.52.1   |
   | com.bhauman/rebel-readline             | 0.1.4    | 0.1.5    |
   | com.clojure-goes-fast/clj-memory-meter | 0.3.0    | 0.4.0    |
   | com.github.flow-storm/clojure          | 1.12.0-2 | 1.12.0-4 |
   | com.github.flow-storm/flow-storm-dbg   | 4.0.2    | 4.2.0    |
   | com.github.seancorfield/next.jdbc      | 1.3.981  | 1.3.994  |
   | djblue/portal                          | 0.58.4   | 0.58.5   |
   | nrepl/nrepl                            | 1.3.0    | 1.3.1    |
   | org.slf4j/slf4j-nop                    | 2.0.16   | 2.0.17   |


* 2024-12-19
** Added

** Updated
   - dev: clojure-lint-action v3 in lint-review workflow
   - dev: megalinter java v8.3.0 in megalinter workflow
   - dev: setup-clojure 13.1, clj-kondo 2024.11.14, cljstyle 0.17.642 in quality-checks workflow
   - dev: markdown lint default practicalli configuration
   - dev: github repository attributes for edn project
   - aliases: update library versions using `make outdated`

   | :name                                | :current                                 | :latest                                  |
   | ------------------------------------ | ---------------------------------------- | ---------------------------------------- |
   | cider/cider-nrepl                    | 0.50.2                                   | 0.50.3                                   |